_generated-doc/2.2/config/quarkus-smallrye-health.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-smallrye-health_configuration]]link:#quarkus-smallrye-health_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-health_quarkus.health.extensions.enabled]]`link:#quarkus-smallrye-health_quarkus.health.extensions.enabled[quarkus.health.extensions.enabled]`

[.description]
--
Whether or not extensions published health check should be enabled.
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-health_quarkus.health.openapi.included]]`link:#quarkus-smallrye-health_quarkus.health.openapi.included[quarkus.health.openapi.included]`

[.description]
--
Whether or not to include the Liveness and Readiness Health endpoints in the generated OpenAPI document
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-health_quarkus.smallrye-health.root-path]]`link:#quarkus-smallrye-health_quarkus.smallrye-health.root-path[quarkus.smallrye-health.root-path]`

[.description]
--
Root path for health-checking endpoints. By default, this value will be resolved as a path relative to `$++{++quarkus.http.non-application-root-path++}++`.
--|string 
|`health`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-health_quarkus.smallrye-health.liveness-path]]`link:#quarkus-smallrye-health_quarkus.smallrye-health.liveness-path[quarkus.smallrye-health.liveness-path]`

[.description]
--
The relative path of the liveness health-checking endpoint. By default, this value will be resolved as a path relative to `$++{++quarkus.smallrye-health.rootPath++}++`.
--|string 
|`live`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-health_quarkus.smallrye-health.readiness-path]]`link:#quarkus-smallrye-health_quarkus.smallrye-health.readiness-path[quarkus.smallrye-health.readiness-path]`

[.description]
--
The relative path of the readiness health-checking endpoint. By default, this value will be resolved as a path relative to `$++{++quarkus.smallrye-health.rootPath++}++`.
--|string 
|`ready`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-health_quarkus.smallrye-health.group-path]]`link:#quarkus-smallrye-health_quarkus.smallrye-health.group-path[quarkus.smallrye-health.group-path]`

[.description]
--
The relative path of the health group endpoint. By default, this value will be resolved as a path relative to `$++{++quarkus.smallrye-health.rootPath++}++`.
--|string 
|`group`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-health_quarkus.smallrye-health.wellness-path]]`link:#quarkus-smallrye-health_quarkus.smallrye-health.wellness-path[quarkus.smallrye-health.wellness-path]`

[.description]
--
The relative path of the wellness health-checking endpoint. By default, this value will be resolved as a path relative to `$++{++quarkus.smallrye-health.rootPath++}++`.
--|string 
|`well`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-health_quarkus.smallrye-health.startup-path]]`link:#quarkus-smallrye-health_quarkus.smallrye-health.startup-path[quarkus.smallrye-health.startup-path]`

[.description]
--
The relative path of the startup health-checking endpoint. By default, this value will be resolved as a path relative to `$++{++quarkus.smallrye-health.rootPath++}++`.
--|string 
|`started`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-health_quarkus.smallrye-health.context-propagation]]`link:#quarkus-smallrye-health_quarkus.smallrye-health.context-propagation[quarkus.smallrye-health.context-propagation]`

[.description]
--
Whether the context should be propagated to each health check invocation.
--|boolean 
|`false`


a| [[quarkus-smallrye-health_quarkus.smallrye-health.ui.enable]]`link:#quarkus-smallrye-health_quarkus.smallrye-health.ui.enable[quarkus.smallrye-health.ui.enable]`

[.description]
--
If Health UI should be enabled. By default, Health UI is enabled if it is included (see `always-include`).
--|boolean 
|`true`


h|[[quarkus-smallrye-health_quarkus.smallrye-health.ui-smallrye-health-ui-configuration]]link:#quarkus-smallrye-health_quarkus.smallrye-health.ui-smallrye-health-ui-configuration[SmallRye Health UI configuration]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-health_quarkus.smallrye-health.ui.root-path]]`link:#quarkus-smallrye-health_quarkus.smallrye-health.ui.root-path[quarkus.smallrye-health.ui.root-path]`

[.description]
--
The path where Health UI is available. The value `/` is not allowed as it blocks the application from serving anything else. By default, this value will be resolved as a path relative to `$++{++quarkus.http.non-application-root-path++}++`.
--|string 
|`health-ui`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-health_quarkus.smallrye-health.ui.always-include]]`link:#quarkus-smallrye-health_quarkus.smallrye-health.ui.always-include[quarkus.smallrye-health.ui.always-include]`

[.description]
--
Always include the UI. By default this will only be included in dev and test. Setting this to true will also include the UI in Prod
--|boolean 
|`false`

|===